# friendlyId

./: Makefile  friendlyId.cabal  package.yaml
src/Text/: FriendlyId.hs
